Closed Bug 1691397 Opened 5 years ago Closed 4 years ago

Back-computed percentage on abspos box with box-sizing: content-box is not correct.

Categories

(Core :: Layout, defect)

defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox88 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.

Abspos boxes resolve against the pading box, and we were failing to
increase the percentage basis in that case if box-sizing was
content-box.

This is partially the cause of bug 1691374.

Severity: -- → S3
Attachment #9201767 - Attachment description: Bug 1691397 - Intrinsic sizes back-computed with abspos ancestors should account for padding. r=#layout-reviewers → Bug 1691397 - Intrinsic sizes that depend on percentage-sized abspos ancestors should account for containing-block padding correctly. r=mats
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/83d93b876225 Intrinsic sizes that depend on percentage-sized abspos ancestors should account for containing-block padding correctly. r=layout-reviewers,mats
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/27779 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: