Bug 1691397 - Intrinsic sizes that depend on percentage-sized abspos ancestors should account for containing-block padding correctly. r=layout-reviewers,mats

Abspos boxes resolve against the pading box, and we were failing to
increase the percentage basis in that case if box-sizing was
content-box.

This is partially the cause of bug 1691374.

Differential Revision: https://phabricator.services.mozilla.com/D104389